buildscript {
	ext {
		springBootVersion = '2.0.2.RELEASE'
	}
	repositories {
		jcenter()
		mavenCentral()
		maven {
			url "https://plugins.gradle.org/m2/"
		}
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id "com.github.lkishalmi.gatling" version "0.7.3"
}

defaultTasks "clean","gatlingRun"

apply plugin: 'java'
apply plugin: 'groovy'
apply plugin: 'scala'
apply plugin: 'idea'
//apply plugin: 'eclipse'
//apply from: 'gradle/gatling.gradle'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.aj'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories { mavenCentral() }

springBoot {
	buildInfo()
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter')
	compile('org.codehaus.groovy:groovy')
	gatling 'com.google.code.gson:gson:2.8.0'
	testCompile('org.springframework.boot:spring-boot-starter-test')
	testCompile 'io.gatling:gatling-app:2.2.2'
	testCompile 'io.gatling.highcharts:gatling-charts-highcharts:2.2.2'
	gatlingCompile 'org.scalaj:scalaj-http_2.11:2.3.0'
	gatlingCompile 'org.scala-lang:scala-library:2.12.3'
	gatlingCompile 'org.apache.commons:commons-lang3:3.4'
	gatlingRuntime 'cglib:cglib-nodep:3.2.0'
	gatlingCompile 'org.scala-lang.modules:scala-java8-compat_2.11:0.3.0'
}

gatling {
	toolVersion = '2.3.1'
	jvmArgs = [ '-server', '-Xms512M', '-Xmx512M',
//				'-XX:MaxGCPauseMillis=30',
//				'-XX:G1HeapRegionSize=16m',
//				'-XX:InitiatingHeapOccupancyPercent=75',
//				'-XX:+ParallelRefProcEnabled',
//				'-XX:+PerfDisableSharedMem',
//				'-XX:+AggressiveOpts',
//				'-XX:+OptimizeStringConcat',
//				'-XX:+HeapDumpOnOutOfMemoryError',
//				'-Djava.net.preferIPv4Stack=true',
//				'-Djava.net.preferIPv6Addresses=false'
	]
	scalaVersion = '2.12.3'

}

dependencyManagement {
	gatling {
		dependencies {
			dependencySet(group: 'io.netty', version: '4.0.51.Final') {
				entry 'netty-codec-http'
				entry 'netty-codec'
				entry 'netty-handler'
				entry 'netty-buffer'
				entry 'netty-transport'
				entry 'netty-common'
				entry 'netty-transport-native-epoll'
			}
		}
	}
}